<resources>
    <string name="app_name">HoloSimulator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="information">Information</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="statistics">Statistics</string>
    <string name="total_rounds">Total Rounds:</string>
    <string name="total_time">Total Time:</string>
    <string name="average_score">Average Score:</string>
    <string name="level_9">Level 9</string>
</resources>
